[package]
name = "shinkai_job_queue_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
shinkai_message_primitives = { workspace = true }
shinkai_db = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }

[dependencies.serde]
workspace = true
features = ["derive"]
