[package]
name = "shinkai_job_queue_manager"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
shinkai_message_primitives = { workspace = true }
shinkai_sqlite = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }

[dependencies.serde]
workspace = true
features = ["derive"]

[dev-dependencies]
# shinkai_vector_resources = { workspace = true }
tempfile = "3.2"