[package]
name = "shinkai_lancedb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.117"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
shinkai_tools_primitives = { workspace = true }
shinkai_vector_resources = { workspace = true }
shinkai_message_primitives = { workspace = true }
shinkai_tools_runner = { version = "0.7.14", features = ["built-in-tools"] }
regex = "1"
base64 = "0.22.0"
lancedb = "0.10.0"
arrow = "52.2"
arrow-array = "52.2"
arrow-schema = "52.2"
futures = "0.3.30"
reqwest = { version = "0.11.26", features = [
    "json",
    "tokio-native-tls",
    "blocking",
    "stream",
] }

[dependencies.serde]
version = "1.0.188"
features = ["derive"]
