[package]
name = "shinkai_lancedb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }
futures = { workspace = true }
reqwest = { workspace = true, features = [
    "json",
    "tokio-native-tls",
    "blocking",
    "stream",
] }
base64 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shinkai_tools_primitives = { workspace = true }
shinkai_vector_resources = { workspace = true }
shinkai_message_primitives = { workspace = true }
shinkai_tools_runner = { workspace = true, features = ["built-in-tools"] }
regex = { workspace = true }
lancedb = "0.10.0"
arrow = "52.2"
arrow-array = "52.2"
arrow-schema = "52.2"
