[package]
name = "shinkai_mcp"
version = { workspace = true }
edition = { workspace = true }
description = "Methods to interact with MCP servers"
authors = { workspace = true }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
rmcp = { version = "0.1", features = [
    "client",
    "transport-child-process",
    "transport-sse",
] }
regex = "1"
once_cell = "1.21"
home = "0.5"
strip-ansi-escapes = "0.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
