[package]
name = "shinkai_message_primitives"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
chacha20poly1305 = "0.7.1"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
thiserror = "1.0.44"
hex = { workspace = true }
shinkai_vector_resources = { path = "../shinkai-vector-resources", default-features = false }
aes-gcm = "0.10.3"
blake3 = { workspace = true }
rust_decimal = "1.17.0"
base64 = { workspace = true }
utoipa = "4.2.3"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

tracing = { version = "0.1.40", optional = true }

tracing-subscriber = { version = "0.3", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[test]]
name = "shinkai_message_tests"
path = "tests/shinkai_message_tests.rs"

[[test]]
name = "shinkai_name_tests"
path = "tests/shinkai_name_tests.rs"
