[package]
name = "shinkai_message_pyo3"
version = "0.1.0"
edition = "2018"
authors = ["Nico Arqueros <nico@shinkai.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies]
shinkai_message_primitives = { path = "../shinkai-message-primitives" }
serde_json = "1.0.105"
x25519-dalek = "1.2.0"
ed25519-dalek = "1.0.1"
rand_os = "0.2.2"
rand = "0.8"
hex = "=0.4.3"

[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module", "abi3-py38"]

[build-dependencies]
maturin = "1.3.0"
