[package]
name = "shinkai_message_pyo3"
version = "0.7.7"
edition = "2018"
authors = ["Nico Arqueros <nico@shinkai.com>"]

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies]
shinkai_message_primitives = { path = "../shinkai-message-primitives" }
serde_json = "1.0.105"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = "0.8.4"
hex = "=0.4.3"
chrono = "0.4"
rust_decimal = "1.17.0"

[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module", "abi3-py38"]

[build-dependencies]
maturin = "1.3.0"
