[package]
name = "shinkai_message_pyo3"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies]
shinkai_message_primitives = { path = "../shinkai-message-primitives" }
serde_json = { workspace = true }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
rust_decimal = "1.17.0"

pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py38"] }

[build-dependencies]
maturin = "1.3.0"
