[package]
name = "shinkai_message_wasm"
version = "0.7.6"
edition = "2018"
authors = ["Nico Arqueros <nico@shinkai.com>"]

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shinkai_message_primitives = { path = "../shinkai-message-primitives" }
serde_json = "1.0.105"
serde-wasm-bindgen = "0.5"
chacha20poly1305 = "0.7.1"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = "0.8.4"
wasm-bindgen = "0.2.87"
chrono = "0.4"
chrono-tz = "0.5"
regex = "1"
js-sys = "0.3"
anyhow = "1.0.72"
thiserror = "1.0.44"
console_log = "0.2"
log = "0.4.14"
env_logger = "0.10"
hex = "=0.4.3"
blake3 = "1.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[dependencies.web-sys]
version = "0.3.64"
features = [
    'console',
]

[[test]]
name = "shinkai_message_tests"
path = "tests/shinkai_message_tests.rs"

[[test]]
name = "shinkai_message_builder_tests"
path = "tests/shinkai_message_builder_tests.rs"

[[test]]
name = "serialized_agent_tests"
path = "tests/serialized_agent_conversion_tests.rs"

[[test]]
name = "shinkai_jobs_tests"
path = "tests/shinkai_jobs_tests.rs"
