[package]
name = "shinkai_message_wasm"
version = "0.8.15"
edition = "2021"
authors = ["Nico Arqueros <nico@shinkai.com>"]

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shinkai_message_primitives = { path = "../shinkai-message-primitives" }
serde_json = { version = "1.0.117" }
serde-wasm-bindgen = "0.5"
chacha20poly1305 = "0.7.1"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = { version = "=0.8.5" }
wasm-bindgen = "0.2.92"
chrono = { version = "0.4" }
chrono-tz = { version = "0.5" }
regex = { version = "1" }
js-sys = "0.3"
anyhow = { version = "1.0" }
thiserror = "1.0.44"
console_log = "0.2"
log = { version = "0.4.20" }
env_logger = "0.10"
hex = { version = "=0.4.3" }
blake3 = { version = "1.2.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }

serde = { version = "1.0.188", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

web-sys = { version = "0.3.64", features = ['console'] }

[[test]]
name = "shinkai_message_tests"
path = "tests/shinkai_message_tests.rs"

[[test]]
name = "shinkai_message_builder_tests"
path = "tests/shinkai_message_builder_tests.rs"

[[test]]
name = "serialized_llm_provider_tests"
path = "tests/serialized_llm_provider_conversion_tests.rs"

[[test]]
name = "shinkai_jobs_tests"
path = "tests/shinkai_jobs_tests.rs"
