[package]
name = "shinkai_mini_libs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
regex = { workspace = true }
base64 = { workspace = true }

[dependencies.serde]
workspace = true
features = ["derive"]
