[package]
name = "shinkai_non_rust_code"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
shinkai_tools_runner = { workspace = true }
tempfile = "3.19"
