[package]
name = "shinkai_non_rust_code"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
shinkai_tools_runner = { workspace = true }
tempfile = { workspace = true }
serial_test = "2.0.0"
