[package]
name = "shinkai_ocr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
image = "0.25.1"
ocrs = "0.8.0"
pdfium-render = { version = "=0.8.22" }
regex = "1"
reqwest = { version = "0.11.26" }
rten = { version = "0.10.0" }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }

[features]
default = []
static = ["pdfium-render/static", "pdfium-render/libc++"]

[[test]]
name = "image_parser_tests"
path = "tests/image_parser_tests.rs"

[[test]]
name = "pdf_parser_tests"
path = "tests/pdf_parser_tests.rs"