[package]
name = "shinkai_ocr"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
image = "0.25.1"
ocrs = "0.8.0"
pdfium-render = { version = "=0.8.22" }
regex = { workspace = true }
reqwest = { workspace = true }
rten = { version = "0.13.1" }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
default = []
static = ["pdfium-render/static", "pdfium-render/libc++"]

[[test]]
name = "image_parser_tests"
path = "tests/image_parser_tests.rs"

[[test]]
name = "pdf_parser_tests"
path = "tests/pdf_parser_tests.rs"
