[package]
name = "shinkai_pdf_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
image = "0.25.1"
ocrs = "0.7.0"
pdfium-render = { version = "=0.8.20" }
reqwest = { version = "0.12" }
rten = { version = "0.9.0" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
static = ["pdfium-render/static", "pdfium-render/libc++"]

[[test]]
name = "pdf_parser_tests"
path = "tests/pdf_parser_tests.rs"